<resources>
    <string name="app_name">StayConnected</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="share_subject">Stay in touch using %1$s app</string>

    <string name="action_settings">Settings</string>

    <!-- Menu Options Strings START-->

    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>

    <!-- Menu Options Strings END-->

    <string name="version_number">Version 1.0</string>

    <!-- hint text for profile image -->
    <string name="hint_text_profile_image_upload">Tap to change profile photo.</string>

    <!--Buttons text -->
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <!-- Strings for ProfileFragment -->

    <string name="hint_email">Email Id</string>
    <string name="hint_contact_no">Contact Number</string>
    <string name="hint_name">Name</string>
    <string name="profile_photo">Profile Photo</string>

    <string name="social_network_connect">Connect with Social Networks</string>
    <string name="permission_denied_explanation">Permission was denied.Cannot use camera.</string>

    <string name="settings">Settings</string>
    <string name="ok">OK</string>

    <string name="disconnect_string">Disconnect from %1$s</string>
    <string name="confiramtion_message">Are you sure you want to disconnect?</string>
    <string name="field_mandatory">%1$s cannot be empty.</string>
    <string name="invalid_email">Email Id is invalid.</string>

    <!--Strings for ContactsListFragment -->

    <string name="contacts_search_hint">Search Contact</string>
    <string name="add_contact">Add Contact</string>
    <string name="delete_contact">Delete Contact</string>

    <!--Message Strings -->

    <string name="profile_saved_message">Profile saved successfully</string>
    <string name="profile_save_error">Something went wrong. Please try again.</string>


</resources>
