<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin">

    <ImageView
        android:id="@+id/qr_code"
        android:layout_width="@dimen/profile_photo_height"
        android:layout_height="@dimen/profile_photo_height"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/profile_image" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="@dimen/profile_photo_height"
        android:layout_height="@dimen/profile_photo_height"
        android:layout_marginBottom="@dimen/nav_header_vertical_spacing"
        android:src="@drawable/transparent"
        app:civ_border_color="@color/colorImageViewBorder"
        app:civ_border_width="@dimen/profile_photo_border"
        app:layout_constraintLeft_toRightOf="@id/qr_code"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/hint_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/nav_header_vertical_spacing"
        android:text="@string/hint_text_profile_image_upload"
        android:textColor="@color/colorImageViewBorder"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@+id/hint_text">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/profile_iv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/nav_header_vertical_spacing"
                android:background="@drawable/view_bg"
                android:padding="@dimen/profile_photo_border"
                android:src="@drawable/ic_profile_small"
                app:layout_constraintHorizontal_weight="0.13"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/profile_name_edit_text" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/profile_name_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/profile_photo_border"
                android:layout_marginStart="@dimen/profile_photo_border"
                android:background="@drawable/edit_text"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:padding="@dimen/nav_header_vertical_spacing"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toRightOf="@id/profile_iv"
                app:layout_constraintRight_toRightOf="parent" />

            <ImageView
                android:id="@+id/phone_iv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="@drawable/view_bg"
                android:padding="@dimen/profile_photo_border"
                android:src="@drawable/ic_local_phone"
                app:layout_constraintHorizontal_weight="0.13"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/phone_edit_text"
                app:layout_constraintTop_toBottomOf="@+id/profile_iv" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/phone_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/profile_photo_border"
                android:layout_marginStart="@dimen/profile_photo_border"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="@drawable/edit_text"
                android:hint="@string/hint_contact_no"
                android:inputType="phone"
                android:padding="@dimen/nav_header_vertical_spacing"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toRightOf="@id/phone_iv"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_iv" />

            <ImageView
                android:id="@+id/mail_iv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="@drawable/view_bg"
                android:padding="@dimen/profile_photo_border"
                android:src="@drawable/ic_mail"
                app:layout_constraintHorizontal_weight="0.13"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/phone_edit_text"
                app:layout_constraintTop_toBottomOf="@+id/phone_iv" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/mail_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/profile_photo_border"
                android:layout_marginStart="@dimen/profile_photo_border"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="@drawable/edit_text"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/nav_header_vertical_spacing"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toRightOf="@id/mail_iv"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_iv" />

            <View
                android:layout_width="50dp"
                android:layout_height="1dp"
                android:layout_marginRight="@dimen/profile_photo_border"
                android:layout_marginTop="34dp"
                android:background="@color/colorImageViewBorder"
                app:layout_constraintRight_toLeftOf="@+id/social_network_tv"
                app:layout_constraintTop_toBottomOf="@+id/mail_edit_text" />

            <TextView
                android:id="@+id/social_network_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_dimen"
                android:text="@string/social_network_connect"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="italic|bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mail_edit_text" />

            <View
                android:layout_width="50dp"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/profile_photo_border"
                android:layout_marginTop="34dp"
                android:background="@color/colorImageViewBorder"
                app:layout_constraintLeft_toRightOf="@+id/social_network_tv"
                app:layout_constraintTop_toBottomOf="@+id/mail_edit_text" />

            <ImageButton
                android:id="@+id/facebook_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/nav_header_vertical_spacing"
                android:layout_marginRight="@dimen/nav_header_vertical_spacing"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_fb"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/social_network_tv" />

            <ImageButton
                android:id="@+id/linkedin_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/nav_header_vertical_spacing"
                android:layout_marginRight="@dimen/nav_header_vertical_spacing"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_linkedin"
                app:layout_constraintLeft_toRightOf="@+id/facebook_button"
                app:layout_constraintTop_toBottomOf="@+id/social_network_tv" />

            <ImageButton
                android:id="@+id/twitter_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/nav_header_vertical_spacing"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_twitter"
                app:layout_constraintRight_toLeftOf="@+id/facebook_button"
                app:layout_constraintTop_toBottomOf="@+id/social_network_tv" />


        </android.support.constraint.ConstraintLayout>


    </ScrollView>

    <Button
        android:id="@+id/save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:background="@drawable/submit_button"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/cancel" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/cancel_button"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/save"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>